# worktree

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  package.json  rolldown.config.mjs  tsconfig.json
.github/workflows/: release.yml
.kiro/specs/rust-cli-migration/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: cli.rs  cli.ts  error.rs  main.rs  utils.ts
src/commands/: add.rs  add.ts  mod.rs  open.rs  open.ts  remove.rs  remove.ts
src/git/: branches.rs  mod.rs  repository.rs  worktree.rs
src/ui/: colors.rs  display.rs  mod.rs  prompts.rs
src/utils/: fs.rs  git.rs  mod.rs  paths.rs  system.rs  validation.rs  vscode.rs
