[package]
name = "worktree-cli"
version = "1.0.0"
edition = "2021"
description = "CLI tool for automated git worktree management"
authors = ["eno"]
license = "MIT"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
git2 = "0.18"
regex = "1.10"