[package]
name = "worktree-cli"
version = "1.0.0"
edition = "2021"
description = "CLI tool for automated git worktree management"
authors = ["eno"]
license = "MIT"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7"
owo-colors = "4.0"
anyhow = "1.0"
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
is-terminal = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true